--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "express": "^4.15.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
+    "node-sass": "^4.5.2",
+    "sass-loader": "6.0.3",
     "vue-hot-reload-api": "^2.0.11",
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^11.3.4",
